themes/scholars/css/wilma.css
/* ... */
div#journal-text p {
	margin:0 6px 0 6px;
	font-size:18px;
	font-family: Muli, Arial, Verdana, Helvetica;color:#fd8918;
}
div#journal-text p:hover {
	margin:0 12px 0 12px;
	font-size:18px;
	font-family: Muli, Arial, Verdana, Helvetica;color:#fff;
	border-radius:4%;
	border:1px solid #bebebe;
	background-color: #fd8918;
}
a.researcher-link:hover {
	text-decoration: none !important;
	color: #3770b7;
}
a.grant-link:hover {
	text-decoration: none !important;
	color: #c62d2d;
}
a.article-link:hover {
	text-decoration: none !important;
	color: #11946d;
}
a.journal-link:hover {
	text-decoration: none !important;
	color: #fd8918;
}
.scholars-container {
	border: 1px solid #cdd4e7;
	border-top: none;
	background-color: #fff;
	margin-bottom: 40px;
}
.scholars-container::before {
	box-sizing: content-box;
    background-color: #CC6949;
    content: "";
    position: absolute;
    top: 0;
    left: -1px;
    width: 100%;
    height: 5px;
    padding: 0 1px;
}
div#scholars-tabs-container {
	margin: 0 -15px 0 -15px;
	padding: 0;
}
#scholars-tabs {
	margin: 5px 0 0 0;
	padding: 8px 0 0 8px; 
	border-top: none;
	border-right: none; 
	border-left:none; 
	background: #ebf3f4;
	border-radius:0
}
.tab-content {
	height: 620px;
	overflow: auto;
}
.scholars-article-metadata {
	color: #595b5b;
	font-size: 16px;
	padding-left: 15px;
}
#by-the-numbers {
	margin-top: 50px;
}
.burnt-orange {
	color: #CC6949;
}
#journal-subject-area-list {
	padding-top: 12px;
}
.scholars-row {
	background-color: #f1f2f3;
}
.scholars-person-info {
	padding-bottom: 15px !important;
}
div#foaf-person-icons {
	float: right;
	margin: 6px 4px -14px 0;
}
div#foaf-organization-icons {
	float: right;
	margin: 12px 4px -14px 0;
}
.foaf-person-row2 {
	margin: 30px -15px 100px -15px;
}
.foaf-organization-row2 {
	margin-top: 30px;
}
div#visualization-column div {
	text-align: center; 
	padding-top: 20px;
	overflow: hidden;
}
div#visualization-column div p {
	padding-top: 8px;
	font-size: 16px;
	color: #CC6949;
}
/*div#dynamic_word_cloud {
	display: inline;
}*/
a#subject-area-link {
	color: #167093;
	float: right;
	padding-right: 18px;
	margin-top: 6px;
}
div#foaf-person-blank-row {
	margin-bottom: 400px;
}
div#word_cloud_vis {
	background-color: #fff;
	border-radius: 5px;
	z-index: 3;
}
div#subject-area-dialog {
	padding: 0;
	border-radius: 3px;
	border-color: #f1f2f3;
	max-height: 480px;
	overflow: auto;
}
a#subject-area-dialog-close {
	float: right;
	padding-right: 15px;
	margin-top: 7px;
}
div#academic-officer-list {
	margin: 6px 0 15px 0;
}
div#academic-officer-list-title {
	color: #CC6949;
	text-align: right;
	margin-top: 6px;
	font-size: 16px;
	display: inline-block;
}
div#academic-officer-list-name {
	color: #595b5b;
	padding-left: 8px;
	margin-top: 6px;
	font-size: 16px;
	display: inline-block;
}
#page-heading-break {
	margin-right: -24px;
	clear: both;
	padding-top: 0  !important;
	border-bottom: 1px solid #b9b9b9;
}
ul#individual-faculty {
	margin-top: 16px;
}
div#foaf-organization-blank-row {
	height: 100px;
	min-height: 100px;
}
#org-grants-modal {
	border-radius: 5px;
	padding: 0; /*7px 12px 3px 12px; */
	background-color: #fff;
}
.dept_collab_vis {
    display: table;
	height: 600px;
	width: 700px;
	z-index: 15;
	border-radius: 5px;
}
.generic-page-header {
	margin-top: 17px;
	float: left;
	margin-left: 24px;
}
#generic-main-column {
	min-height: 40px;
	padding-bottom: 40px;
}
h2#generic-page-heading-break {
	margin-left: 24px;
	clear: both;
	padding: 6px 0 0 0 !important;
	border-bottom: 1px solid rgb(185, 185, 185);
}
article.scholars-property ul li article h3 {
    padding: 10px 0 10px 20px;
    margin: 0;
    font-size: 1.063em;
    color: #CC6949;
	background: #fff;
	border: none;
	text-transform: capitalize;
}
/* ------------------------------------------------->  */
/* SCHOLARS OVERRIDE */
/* ------------------------------------------------->  */
article.property ul.property-list li {
    line-height: 1.2em;
    padding: 10px 20px 5px 40px;
    background-color: #fff;
}
#individual-info h1.foaf-person {
	margin-top: 10px;
	float: left;
}
#individual-info h1.foaf-organization {
	margin-top: 17px;
	float: left;
}
div#profileTypeContainer {
	top: 120px !important;
}
div#body {
	max-width: none;
	min-width: none !important;
}
footer .wrapper {
    width: 100%;
}
body {
   background: #f1f2f3;
 /*  font-family: "Raleway, Verdana, Lucida Sans Unicode","Lucida Grande", Geneva, helvetica, sans-serif !important; */
}
body.home {
    background-color: #f1f2f3;
}
ul.navbar-nav a {
	text-decoration: none;
}

ul.navbar-nav a:HOVER {
	text-decoration: underline;
	background: none;
}
#search-container {
    float: right;
    margin-top: 12px;
	margin-right: 7px;
}
#search-container input.homepage-search {
	border: 1px;
	border-color:#687385;
	border-style:solid;
	border-radius:5px;
	height:32px;
	width: 300px;
    text-decoration: none;
    background-color: #fff;
    background-position: left;
	opacity: 1;
	text-align: left;
}

.home-search-icon {
	font-size: 14px;
}
.home-search-icon:hover {
	cursor: pointer;
}

.search-submit {
	background: transparent;
	border: none;
	color: #fff;
	font-size: 14px;
	
}
div#research-faculty-mbrs {
    font-size: 16px;
    line-height: 16px;
	margin-top: 20px;
}
div#research-faculty-mbrs li.individual {
    clear: both;
}
div#research-faculty-mbrs ul li.individual:first-child {
    clear: both;
    padding-top: 8px
}
div#research-faculty-mbrs li h1 {
    padding: 2px 4px 2px 0;
}
div#research-faculty-mbrs li img {
    width: 90px;  
    float: left;
    padding: 0px 8px 12px 24px; 
}
div#research-faculty-mbrs li span.title {
    display: block;
    font-size: 0.825em;
    line-height: 1.25em;
    padding-bottom: 8px;
}
div#research-faculty-mbrs ul#viewMoreFac  {
    list-style:none;
}
div#research-faculty-mbrs ul#viewMoreFac li {
    text-align:right;
    padding: 0 16px 8px 0;
    clear:both;
}
/* ... */

